--- a/meteor-ng-app.html
+++ b/meteor-ng-app.html
@@ -1,9 +1,13 @@
 <head>
-  <title>meteor-ng-app</title>
+    <title>meteor-ng-app</title>
 </head>
 
 <body>
-  <h1>Welcome to Meteor + Angular</h1>
+<div id="app" ng-controller="AppCtrl as vm">
+    <h1>{{vm.message}}</h1>
 
+    <p>Current Time</p>
+    <p>{{vm.date | date:'medium'}}</p>
+</div>
 </body>
 
