using ngApp directive

--- a/meteor-ng-app.html
+++ b/meteor-ng-app.html
@@ -3,7 +3,7 @@
 </head>
 
 <body>
-<div id="app" ng-controller="AppCtrl as vm">
+<div ng-app="myApp" ng-controller="AppCtrl as vm">
     <h1>{{vm.message}}</h1>
 
     <p>Current Time</p>
