--- a/meteor-ng-app.html
+++ b/meteor-ng-app.html
@@ -2,12 +2,11 @@
     <title>meteor-ng-app</title>
 </head>
 
-<body ng-app="myApp">
-<div ng-controller="AppCtrl as vm">
+<body >
+<div ng-app="myApp" ng-controller="AppCtrl as vm">
     <h1>{{vm.message}}</h1>
 
     <p>Current Time</p>
     <p>{{vm.date | date:'medium'}}</p>
 </div>
 </body>
-
