--- a/meteor-ng-app.html
+++ b/meteor-ng-app.html
@@ -2,8 +2,8 @@
     <title>meteor-ng-app</title>
 </head>
 
-<body >
-<div ng-app="myApp" ng-controller="AppCtrl as vm">
+<body ng-app="myApp">
+<div ng-controller="AppCtrl as vm">
     <h1>{{vm.message}}</h1>
 
     <p>Current Time</p>
